# New-building-permit-CR

./: .gitignore  Makefile  README.md  cloudbuild.yaml  generate_fake_pdf.py
.agents/skills/assessor-mcp-server/: SKILL.md
.agents/skills/building-reviewer/: SKILL.md
.github/workflows/: ci.yml
agent/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  services.py  test_main.py
agent-engine/: Makefile  README.md  deployment_metadata.json  pyproject.toml
agent-engine/app/: __init__.py
agent-engine/app/app_utils/: deploy.py
agent/.cloudbuild/: deploy.yaml
api/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  main_test.go
api/.cloudbuild/: deploy.yaml
api/internal/database/: database.go
assessor-mcp-server/: Dockerfile  Makefile  README.md  benchmark_lookup.py  db.py  main.py  pyproject.toml  test_main.py  test_network.py  test_remote.py
assessor-mcp-server/.cloudbuild/: deploy.yaml
contractor-agent/: Dockerfile  README.md  main.py
frontend/: Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/.cloudbuild/: deploy.yaml
frontend/src/: App.tsx  store.ts  telemetry.ts
infra/: Makefile  README.md  assessor-mcp-spec.json  contractor-agent.json  onboard_assessor_mcp.py  onboard_contractor_agent.py  pyproject.toml  rag_setup.py  setup.py  setup.sh
model-armor/: template.json
plan/: spec.md
tests/: kitchen_plan.py  liability_trap_plan.py  malicious_kitchen_plan.py  pyproject.toml  simulate_traffic.py  tool_manipulation_plan.py
(+11 files in other folders)
